test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/void/void_fun_params.plx
#  The standard doesn't technically prohibit void parameters
#  but there is no conceivable reason to allow them
pub fn foo(x: none) none;

pub fn main(none) i32 {
    return nil
}
